--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>基本的なHTMLページ</title>
+    <link rel="stylesheet" href="aaaaaa.css">
+</head>
+<body>
 
+    <h1>こんにちは！</h1>
+    <p>これは基本的なHTMLファイルのサンプルです。</p>
+
+</body>
+</html>
