--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-    <h1>こんにちはあああこんにちは</h1>
-    <p>これは基本的なHTMLファイルのサンプルです。https://news.yahoo.co.jp/articles/55adaeed60097fa080dd49bbc886ac2129dd827d</p>
+    <h1>船橋市のいいところ</h1>
+    <p>これは基本的なHTMLファイルのサンプルです。</p>
 
-</body>
+</body>アクセスの良さ、海老川が春になると桜がたくさん咲いてきれい
 </html>
