--- a/index.html
+++ b/index.html
@@ -9,7 +9,31 @@
 <body>
 
     <h1>船橋市のいいところ</h1>
-    <p>これは基本的なHTMLファイルのサンプルです。</p>
+    <p></p>
 
-</body>アクセスの良さ、海老川が春になると桜がたくさん咲いてきれい
+</body>1. 全国的にも有名なレジャースポット
+船橋といえば、まずはここを外せません。
+
+ふなばしアンデルセン公園
+
+特徴: トリップアドバイザーの「日本のテーマパークランキング」で、ディズニーやUSJに次ぐ上位にランクインしたこともある実力派です。
+
+魅力: 巨大なアスレチック、美しい花畑、動物とのふれあい広場などがあり、入園料が手頃（大人900円程度）で一日中遊べます。特にお子様連れやデートに最高です。
+
+ふなばし三番瀬海浜公園
+
+特徴: 都心から一番近い潮干狩り場として有名です。
+
+魅力: 潮干狩り（春〜夏）だけでなく、BBQエリアや野鳥観察も楽しめます。海に沈む夕日がとても綺麗です。
+
+2. 圧倒的なショッピング環境（南船橋エリア）
+「ららぽーと」発祥の地であり、買い物の選択肢は千葉県内でもトップクラスです。
+
+ららぽーとTOKYO-BAY
+
+店舗数が約440店と国内最大級。服、雑貨、映画館、グルメまで全て揃います。広すぎて迷子になるレベルです。
+
+IKEA Tokyo-Bay
+
+ららぽーとのすぐ近くにあります。家具だけでなく、レストランでのスウェーデン料理も人気です。
 </html>
