Enhance index.html with content about Funabashi
Added a heading and paragraph about Funabashi's attractions.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>船橋のいいところ</title>
     <link rel="stylesheet" href="aaaaaa.css">
 </head>
-<body>1. 全国的にも有名なレジャースポット
+<body>
+    <h1>船橋市のいいところ</h1>
+    <p>1. 全国的にも有名なレジャースポット
 船橋といえば、まずはここを外せません。
 
 ふなばしアンデルセン公園
@@ -31,9 +33,7 @@
 IKEA Tokyo-Bay
 
 ららぽーとのすぐ近くにあります。家具だけでなく、レストランでのスウェーデン料理も人気です。
-
-    <h1>船橋市のいいところ</h1>
-    <p>/* 派手な色の組み合わせ */
+</style>/* 派手な色の組み合わせ */
             background: linear-gradient(45deg, #ff0000, #ff7f00, #ffff00, #00ff00, #0000ff, #4b0082, #8f00ff);
             background-size: 400% 400%;
             animation: rainbowParty 10s ease infinite;
