--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 IKEA Tokyo-Bay
 
 ららぽーとのすぐ近くにあります。家具だけでなく、レストランでのスウェーデン料理も人気です。
+
+    </head>
+<body>
+    
+    <h1>ようこそ！</h1>
+    <p>ここが派手になったサイトです</p>
+
+</body></p>
+
+</body
 </style>/* 派手な色の組み合わせ */
             background: linear-gradient(45deg, #ff0000, #ff7f00, #ffff00, #00ff00, #0000ff, #4b0082, #8f00ff);
             background-size: 400% 400%;
@@ -63,14 +73,4 @@ IKEA Tokyo-Bay
                          -1px 1px 0 #000,
                          1px 1px 0 #000;
         }
-    </style>
-    </head>
-<body>
-    
-    <h1>ようこそ！</h1>
-    <p>ここが派手になったサイトです</p>
-
-</body></p>
-
-</body
-</html>
+    </style></html>
