Update comment in index.html for clarity

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ IKEA Tokyo-Bay
 </body></p>
 
 </body
-</style>/* 派手な色の組み合わせ */
+</style>/* green and pink */
             background: linear-gradient(45deg, #ff0000, #ff7f00, #ffff00, #00ff00, #0000ff, #4b0082, #8f00ff);
             background-size: 400% 400%;
             animation: rainbowParty 10s ease infinite;
